generated/manifests/prod-axon/profilarr/Deployment-profilarr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/controller: main
    app.kubernetes.io/instance: profilarr
    app.kubernetes.io/name: profilarr
  name: profilarr
  namespace: media
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/controller: main
      app.kubernetes.io/instance: profilarr
      app.kubernetes.io/name: profilarr
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/controller: main
        app.kubernetes.io/instance: profilarr
        app.kubernetes.io/name: profilarr
    spec:
      automountServiceAccountToken: false
      containers:
        - env:
            - name: AUTH
              value: "off"
            - name: ORIGIN
              value: https://profilarr.json64.dev
            - name: PGID
              value: "65536"
            - name: PUID
              value: "1027"
            - name: TZ
              value: America/Los_Angeles
          image: ghcr.io/dictionarry-hub/profilarr@sha256:35af89c7d74b80e5db1320b31180d662fa70741ef274c84e551427d837418b7f
          livenessProbe:
            failureThreshold: 3
            initialDelaySeconds: 0
            periodSeconds: 10
            tcpSocket:
              port: 6868
            timeoutSeconds: 1
          name: main
          readinessProbe:
            failureThreshold: 3
            initialDelaySeconds: 0
            periodSeconds: 10
            tcpSocket:
              port: 6868
            timeoutSeconds: 1
          volumeMounts:
            - mountPath: /config
              name: config
      dnsConfig:
        options:
          - name: ndots
            value: "1"
      dnsPolicy: ClusterFirst
      enableServiceLinks: false
      hostIPC: false
      hostNetwork: false
      hostPID: false
      serviceAccountName: profilarr
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: profilarr
