generated/manifests/prod-axon/profilarr/Service-profilarr.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: profilarr
    app.kubernetes.io/name: profilarr
    app.kubernetes.io/service: profilarr
  name: profilarr
  namespace: media
spec:
  ports:
    - name: http
      port: 6868
      protocol: TCP
      targetPort: 6868
  selector:
    app.kubernetes.io/controller: main
    app.kubernetes.io/instance: profilarr
    app.kubernetes.io/name: profilarr
  type: ClusterIP
