generated/manifests/prod-axon/profilarr/HTTPRoute-profilarr.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: profilarr
  namespace: media
spec:
  hostnames:
    - profilarr.json64.dev
  parentRefs:
    - name: default-gateway
      namespace: gateways
      sectionName: json64-dev-https
  rules:
    - backendRefs:
        - name: profilarr
          port: 6868
