generated/manifests/prod-axon/profilarr/SecurityPolicy-profilarr-oidc.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: profilarr-oidc
  namespace: media
spec:
  oidc:
    clientID: profilarr
    clientSecret:
      name: profilarr-oidc-client-secret
    forwardAccessToken: true
    provider:
      authorizationEndpoint: https://idm.json64.dev/ui/oauth2
      issuer: https://idm.json64.dev/oauth2/openid/profilarr
      tokenEndpoint: https://idm.json64.dev/oauth2/token
    scopes:
      - email
      - openid
      - profile
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: profilarr
