generated/manifests/prod-axon/profilarr/CiliumNetworkPolicy-allow-arr-egress-profilarr.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-arr-egress-profilarr
  namespace: media
spec:
  description: Allow profilarr to reach the sonarr/radarr APIs.
  egress:
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: sonarr
      toPorts:
        - ports:
            - port: "8989"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: radarr
      toPorts:
        - ports:
            - port: "7878"
              protocol: TCP
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: profilarr
