generated/manifests/prod-axon/profilarr/CiliumNetworkPolicy-allow-dns-egress-profilarr.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-dns-egress-profilarr
  namespace: media
spec:
  description: Allow profilarr to resolve via kube-dns.
  egress:
    - toEndpoints:
        - matchLabels:
            k8s-app: kube-dns
            k8s:io.kubernetes.pod.namespace: kube-system
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: profilarr
