generated/manifests/prod-axon/profilarr/CiliumNetworkPolicy-allow-gateway-ingress-profilarr.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-gateway-ingress-profilarr
  namespace: media
spec:
  description: Allow Envoy Gateway proxies to reach profilarr.
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: profilarr
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: gateways
      toPorts:
        - ports:
            - port: "6868"
              protocol: TCP
