generated/manifests/prod-axon/profilarr/CiliumNetworkPolicy-allow-internet-egress-profilarr.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-internet-egress-profilarr
  namespace: media
spec:
  description: Allow profilarr to git-clone the Dictionarry database over HTTPS.
  egress:
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: profilarr
